Restore admin vendor swagger annotations
